--- a/lib/phx_web/templates/layout/react.html.eex
+++ b/lib/phx_web/templates/layout/react.html.eex
@@ -1,5 +1,7 @@
+<div id="REACT-ROOT"></div>
+
 <script>
 
-  console.log( <%= { :safe, Poison.encode!( do_render_json( @conn, @json ) ) } %> )
+  console.log( <%= { :safe, Poison.encode!( add_json_layout( assigns, @json ) ) } %> )
 
 </script>
